--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "npm install --legacy-peer-deps && cd .. && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install --legacy-peer-deps && cd .. && npm install --legacy-peer-deps --include=dev --prefix frontend && npm run build --prefix frontend"
   },
   "author": "",
   "license": "ISC",
